# winit-ocaml

./: .gitignore  .gitmodules  .ocamlformat  CLADUE.md  CLAUDE.md  Cargo.toml  Dockerfile  FINDINGS.md  QUICKSTART.md  README.md  build.sh  clean.sh  developer.md  dune-project  fmt.sh  imgdiff.sh  instructions.md  plan.md  progress.md  readme.md  test.sh  wgpu.opam  winit-softbuffer.opam
.cargo/: config.toml
.claude/agents/: ocaml-issue-addressing.md  ocaml-issue-checker.md
.github/workflows/: build.yml
.zed/: tasks.json
codegen/: CLAUDE.md  config.ml  config.mli  dune  gen_bindings.ml  gen_high.ml  gen_high.mli  gen_low.ml  gen_low.mli  ir.ml  names.ml  parse_yml.ml  parse_yml.mli  predicates.ml  type_mapping.ml
codegen/test/: dune  test_enums.ml  test_helpers.ml  test_methods.ml  test_names.ml  test_regression.ml  test_regression_tests.ml  test_structs.ml  test_types.ml
combined_ffi/: Cargo.toml
combined_ffi/src/: lib.rs
docs/: events.md
docs/old/: GETTING_STARTED.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  TEST_RESULTS.md
examples/: dune  hello_triangle_wgpu.ml  hello_window.ml  paint.ml  test_ffi.ml
examples/prototype/: Cargo.toml
examples/prototype/src/: manual_draw.rs  pump_events_test.rs
high/: bitsets.ml  bitsets.mli  dune  enums.ml  enums.mli  wgpu.ml  wgpu.mli
image_buf/src/: dune  image_buf.ml  image_buf.mli
image_buf/test/: test_image_buf.ml
issues/closed/: 1-array-members.md  1-project-structure.md  10-debug-rust-build.md  11-present-damaged.md  12-prettier-paint.md  13-split-winit-from-softbuffer.md  14-project-organization.md  15-support-wgpu.md  2-rust-prototype.md  3-vendored-copies.md  4-dune-knows-about-rust.md  5-handle-all-winit-events.md  6-wacom-tablet-support.md  autogen-release-methods.md  complex-descriptor-structs.md  format-generated-c-code.md  image_tests_are_flaky.md  private-records-with-create.md  remove-item-all-from-bitset-public-api.md  remove-simple-variants.md  separate-files-for-enum-and-bitset-in-high-level.md  unlock-remaining-manual-methods.md  use-functor-for-bitsets-ml.md  wgpu-bigarray-polymorphism.md
issues/open/: 1-project-structure.md  10-debug-rust-build.md  11-present-damaged.md  12-prettier-paint.md  14-project-organization.md  15-support-wgpu.md  16-macos-wgpu-support.md  2-rust-prototype.md  3-vendored-copies.md  4-dune-knows-about-rust.md  5-handle-all-winit-events.md  6-wacom-tablet-support.md  7-ime-support.md  8-drag-drop-support.md  9-gesture-events.md  amd64-fiber-stack-growth-corrupts-unboxed.md  complex-descriptor-structs.md  enum-undefined-means-optional.md  pointer-data-methods.md
lib/: dune  wgpu.ml
low/: build_wgpu_native.sh  dune  wgpu_low.ml  wgpu_low.mli  wgpu_low_stubs.c
nearest_seg/src/: dune  nearest_seg.ml  nearest_seg.mli
nearest_seg/test/: dune  test_nearest_seg.ml
neon/: dune  neon.ml  scene.neo
ocaml/: dune  winit_softbuffer.ml  winit_softbuffer.mli  winit_stubs.c
ocaml/examples/: dune  hello_window.ml  paint.ml  test_ffi.ml
ocaml/image_buf/src/: dune  image_buf.ml
ocaml/image_buf/test/: dune  test_image_buf.ml
ocaml/softbuffer/: dune  softbuffer.mli
ocaml/winit/: dune  winit.mli  winit_stubs.c
ocaml/winit_softbuffer/: dune  winit_softbuffer.ml  winit_stubs.c
phase_trace/: dune  phase_trace.ml  phase_trace.mli
phase_trace/perfetto/: dune  phase_trace_perfetto.ml  phase_trace_perfetto.mli
phase_trace/test/: dune  test_parallel.ml  test_perfetto.ml  test_recorder.ml  test_stress.ml  test_summary.ml
prototype/: Cargo.toml
prototype/src/: manual_draw.rs  pump_events_test.rs
quickcheck_trials/: dune
rust/: Cargo.toml
rust/prototype/src/: simple_test.rs
rust/src/: lib.rs  softbuffer_ffi.rs
sdf/: CLAUDE.md
sdf/bench/: bench.ml  compare.ml  (+2 more)
sdf/lang/src/: ast.mli  compile.ml  compile.mli  dune  errors.lrgrep  lexer.mll  neo.ml  neo.mli  parser.conflicts  parser.mly
sdf/neon/: CLAUDE.md  boxes.neo  dune  neon.ml  scene.neo  svg.ml  ui.ml
sdf/src/: CLAUDE.md  batch_backend_intf.ml  dune  executor.ml  executor.mli  executor_intf.ml  expr_graph.ml  expr_graph.mli  expr_graph_batch_eval.ml  expr_graph_batch_eval.mli  expr_graph_eval.ml  expr_graph_eval.mli  expr_graph_range_eval.ml  expr_graph_range_eval.mli  expr_graph_register_minimizer.ml  expr_graph_register_minimizer.mli  expr_tree.ml  expr_tree.mli  expr_tree_eval.ml  expr_tree_eval.mli  fiber_stack.ml  fiber_stack.mli  interval.ml  interval.mli  oracle.ml  oracle_dependencies.ml  oracle_dependencies.mli  oracle_key.ml  oracle_key.mli  prepared_oracle.ml  prepared_oracle.mli  prepared_oracle_intf.ml  prepared_oracle_key.ml  prepared_oracle_key.mli  sample_region.ml  sample_region.mli  sample_result.ml  sample_result.mli  sdf.ml  simd.ml  (+8 more)
softbuffer/src/: build_softbuffer_ffi.sh  dune  gen_link_mode_flags.sh  softbuffer.ml  softbuffer_stubs.c
test/: CLAUDE.md  dune  test_compute.ml
test/fundamentals/inter-stage-variables/: builtin_position_direct.ml  dune  inter_stage_variables_by_fn_param.ml  inter_stage_variables_triangle.ml
test/fundamentals/multisampling/: dune
test/fundamentals/rotation/: dune  rotation.ml  rotation_via_unit_circle.ml
test/fundamentals/rotation_via_unit_circle/: dune
test/fundamentals/skybox/: dune  skybox.ml
test/fundamentals/uniforms/: dune
test/fundamentals/vertex-buffers/: dune  vertex_buffers_index_buffer.ml
test/integration/depth_test/: depth_test.ml  dune
test/integration/render_clear/: dune  render_clear.ml
test/integration/render_triangle/: dune  render_triangle.ml
test/integration/render_uniform_buffer/: dune  render_uniform_buffer.ml
webgpu_fundamentals/: pyproject.toml
wgpu/: CLAUDE.md  imgdiff.sh
wgpu/low/: build_wgpu_native.sh  dune  gen_c_library_flags.sh  gen_link_mode_flags.sh  wgpu_low.ml  wgpu_low.mli  wgpu_low_stubs.c
wgpu/test/fundamentals/orthographic-projection/: dune  orthographic_3d_f.ml  orthographic_ortho_matrix.ml
winit/ffi/: Cargo.toml
winit/ffi/src/: ffi.rs  lib.rs
winit/src/: build_winit_ffi.sh  dune  gen_c_library_flags.sh  gen_link_mode_flags.sh  winit.ml  winit.mli  winit_stubs.c
(+454 files in other folders)
