[workspace]
members = ["winit/ffi", "softbuffer/ffi", "examples/prototype"]
exclude = ["vendor/softbuffer", "vendor/winit"]
resolver = "2"

# These settings are required because the vendored winit/softbuffer use workspace inheritance
[workspace.package]
edition = "2024"
license = "Apache-2.0"
repository = "https://github.com/rust-windowing/winit"
rust-version = "1.85"
version = "0.31.0-beta.2"

[workspace.dependencies]
# Core dependencies from vendored winit
bitflags = "2"
cfg_aliases = "0.2.1"
cursor-icon = "1.1.0"
dpi = { version = "0.1.2", path = "vendor/winit/dpi" }
keyboard-types = "0.8.0"
mint = "0.5.6"
rwh_06 = { package = "raw-window-handle", version = "0.6", features = ["std"] }
serde = { version = "1", features = ["serde_derive"] }
smol_str = "0.3"
tracing = { version = "0.1.40", default-features = false }

# Winit internal crates
winit = { path = "vendor/winit/winit" }
winit-android = { version = "=0.31.0-beta.2", path = "vendor/winit/winit-android" }
winit-appkit = { version = "=0.31.0-beta.2", path = "vendor/winit/winit-appkit" }
winit-common = { version = "=0.31.0-beta.2", path = "vendor/winit/winit-common" }
winit-core = { version = "=0.31.0-beta.2", path = "vendor/winit/winit-core" }
winit-orbital = { version = "=0.31.0-beta.2", path = "vendor/winit/winit-orbital" }
winit-uikit = { version = "=0.31.0-beta.2", path = "vendor/winit/winit-uikit" }
winit-wayland = { version = "=0.31.0-beta.2", path = "vendor/winit/winit-wayland", default-features = false }
winit-web = { version = "=0.31.0-beta.2", path = "vendor/winit/winit-web" }
winit-win32 = { version = "=0.31.0-beta.2", path = "vendor/winit/winit-win32" }
winit-x11 = { version = "=0.31.0-beta.2", path = "vendor/winit/winit-x11" }

# Dev dependencies
image = { version = "0.25.0", default-features = false }
softbuffer = { version = "0.4.6", default-features = false, features = [
    "x11",
    "x11-dlopen",
    "wayland",
    "wayland-dlopen",
] }
tracing-subscriber = "0.3.18"

# Android dependencies
android-activity = "0.6.0"
ndk = { version = "0.9.0", features = ["rwh_06"], default-features = false }

# Apple dependencies
block2 = "0.6.1"
dispatch2 = { version = "0.3.0", default-features = false, features = ["std", "objc2"] }
objc2 = { version = "0.6.1", features = ["relax-sign-encoding"] }
objc2-app-kit = { version = "0.3.2", default-features = false }
objc2-core-foundation = { version = "0.3.2", default-features = false }
objc2-core-graphics = { version = "0.3.2", default-features = false }
objc2-core-video = { version = "0.3.2", default-features = false }
objc2-foundation = { version = "0.3.2", default-features = false }
objc2-ui-kit = { version = "0.3.2", default-features = false }

# Windows dependencies
unicode-segmentation = "1.7.1"
windows-sys = "0.61"

# Linux dependencies
ahash = { version = "0.8.7", features = ["no-rng"] }
bytemuck = { version = "1.13.1", default-features = false }
calloop = "0.14.3"
libc = "0.2.64"
memmap2 = "0.9.0"
percent-encoding = "2.0"
rustix = { version = "1.0.7", default-features = false }
x11-dl = "2.19.1"
x11rb = { version = "0.13.0", default-features = false }
xkbcommon-dl = "0.4.2"

# Orbital dependencies
orbclient = { version = "0.3.47", default-features = false }
redox_syscall = "0.5.7"

# Web dependencies
atomic-waker = "1"
concurrent-queue = { version = "2", default-features = false }
console_error_panic_hook = "0.1"
js-sys = "0.3.70"
pin-project = "1"
tracing-web = "0.1"
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
wasm-bindgen-test = "0.3"
web-time = "1"
web_sys = { package = "web-sys", version = "0.3.70" }

[profile.release]
opt-level = 3
lto = true
