(executable
 (name hello_window)
 (libraries winit softbuffer unix bigarray))

(executable
 (name test_ffi)
 (libraries winit unix))

(executable
 (name paint)
 (libraries winit softbuffer unix bigarray))

(executable
 (name hello_triangle_wgpu)
 (libraries winit winit_wgpu wgpu core)
 (preprocess
  (pps ppx_jane)))
