(library
 (name wgpu)
 (public_name wgpu)
 (libraries wgpu_low))

(rule
 (deps
  (source_tree ../codegen/templates))
 (action
  (with-stdout-to
   wgpu.ml
   (pipe-stdout
    (run ../codegen/gen_bindings.exe High Ml)
    (run ocamlformat --impl -))))
 (mode promote)
 (target wgpu.ml))

(rule
 (deps
  (source_tree ../codegen/templates))
 (action
  (with-stdout-to
   wgpu.mli
   (pipe-stdout
    (run ../codegen/gen_bindings.exe High Mli)
    (run ocamlformat --intf -))))
 (mode promote)
 (target wgpu.mli))
