; Rule to build wgpu-native as a static library using Cargo

(rule
 (targets libwgpu_native.a dllwgpu_native.so)
 (deps
  (source_tree ../vendor/wgpu-native/src)
  (source_tree ../vendor/wgpu-native/ffi)
  ../vendor/wgpu-native/Cargo.toml
  ../vendor/wgpu-native/Cargo.lock
  build_wgpu_native.sh)
 (action
  (no-infer
   (run bash build_wgpu_native.sh %{profile}))))

(library
 (name wgpu_low)
 (public_name wgpu.low)
 (foreign_stubs
  (language c)
  (names wgpu_low_stubs)
  (include_dirs
   ../vendor/wgpu-native/ffi
   ../vendor/wgpu-native/ffi/webgpu-headers)
  (flags :standard))
 (foreign_archives wgpu_native)
 (c_library_flags
  (:include c_library_flags.sexp)))

; Generate C library flags based on OS

(rule
 (target c_library_flags.sexp)
 (action
  (write-file %{target} "(:standard -lpthread -ldl -lm)")))

; Code generation rules

(rule
 (deps
  (source_tree ../codegen/templates))
 (action
  (with-stdout-to
   wgpu_low_stubs.c
   (pipe-stdout
    (run ../codegen/gen_bindings.exe Low C)
    (run clang-format))))
 (mode promote)
 (target wgpu_low_stubs.c))

(rule
 (action
  (with-stdout-to
   wgpu_low.ml
   (pipe-stdout
    (run ../codegen/gen_bindings.exe Low Ml)
    (run ocamlformat --impl -))))
 (mode promote)
 (target wgpu_low.ml))

(rule
 (action
  (with-stdout-to
   wgpu_low.mli
   (pipe-stdout
    (run ../codegen/gen_bindings.exe Low Mli)
    (run ocamlformat --intf -))))
 (mode promote)
 (target wgpu_low.mli))
