; Rule to build the Rust FFI library using Cargo

(rule
 (targets libwinit_ocaml_ffi.a dllwinit_ocaml_ffi.so)
 (deps
  (source_tree ../rust/src)
  (source_tree ../rust/vendor)
  ../rust/Cargo.toml
  ../rust/Cargo.lock)
 (action
  (no-infer
   (bash
    "\
if [ \"%{profile}\" = \"release\" ]; then \
  cd ../rust && cargo build --release; \
  cp target/release/libwinit_ocaml_ffi.a ../ocaml/libwinit_ocaml_ffi.a; \
  cp target/release/libwinit_ocaml_ffi.so ../ocaml/dllwinit_ocaml_ffi.so; \
else \
  cd ../rust && cargo build; \
  cp target/debug/libwinit_ocaml_ffi.a ../ocaml/libwinit_ocaml_ffi.a; \
  cp target/debug/libwinit_ocaml_ffi.so ../ocaml/dllwinit_ocaml_ffi.so; \
fi"))))

(library
 (name winit_softbuffer)
 (public_name winit-softbuffer)
 (libraries unix bigarray)
 (foreign_stubs
  (language c)
  (names winit_stubs)
  (flags :standard))
 (foreign_archives winit_ocaml_ffi)
 (c_library_flags :standard -lpthread -ldl -lm))
