(library
 (name quickcheck_trials))

; The module is generated at build time from the QUICKCHECK_TRIALS
; environment variable. Dune tracks env vars expanded via %{env:...},
; so changing the variable rebuilds this library and its dependents.
(rule
 (targets quickcheck_trials.ml)
 (action
  (with-stdout-to
   quickcheck_trials.ml
   (echo "let trials = %{env:QUICKCHECK_TRIALS=100}\n"))))
