[package]
name = "winit-ocaml-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib"]

[dependencies]
softbuffer = { path = "./vendor/softbuffer" }
winit = { path = "./vendor/winit/winit" }
raw-window-handle = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 3
lto = true
