; Rule to build the Rust FFI library using Cargo

(rule
 (targets libwinit_ocaml_ffi.a dllwinit_ocaml_ffi.so)
 (deps
  (source_tree ../../rust/src)
  (source_tree ../../rust/vendor)
  ../../rust/Cargo.toml
  ../../rust/Cargo.lock)
 (action
  (no-infer
   (bash
    "\n# Determine dynamic library extension based on OS\ncase \"$(uname)\" in\n  Darwin) DYLIB_EXT=dylib ;;\n  *)      DYLIB_EXT=so ;;\nesac\n\nif [ \"%{profile}\" = \"release\" ]; then\n  cd ../../rust && cargo build --release\n  cp target/release/libwinit_ocaml_ffi.a ../ocaml/winit_softbuffer/libwinit_ocaml_ffi.a\n  cp target/release/libwinit_ocaml_ffi.$DYLIB_EXT ../ocaml/winit_softbuffer/dllwinit_ocaml_ffi.so\nelse\n  cd ../../rust && cargo build\n  cp target/debug/libwinit_ocaml_ffi.a ../ocaml/winit_softbuffer/libwinit_ocaml_ffi.a\n  cp target/debug/libwinit_ocaml_ffi.$DYLIB_EXT ../ocaml/winit_softbuffer/dllwinit_ocaml_ffi.so\nfi\n"))))

; Generate platform-specific C library flags

(rule
 (targets c_library_flags.sexp)
 (action
  (bash
   "\ncase \"$(uname)\" in\n  Darwin)\n    echo '(-lpthread -framework CoreFoundation -framework CoreGraphics -framework AppKit -framework QuartzCore -framework CoreVideo -framework Metal -framework IOKit -framework IOSurface -framework Carbon -lobjc)' > c_library_flags.sexp\n    ;;\n  *)\n    echo '(-lpthread -ldl -lm)' > c_library_flags.sexp\n    ;;\nesac\n")))

(library
 (name winit_softbuffer)
 (public_name winit-softbuffer)
 (libraries unix bigarray)
 (foreign_stubs
  (language c)
  (names winit_stubs)
  (flags :standard))
 (foreign_archives winit_ocaml_ffi)
 (c_library_flags
  (:standard
   (:include c_library_flags.sexp))))
