(executable
 (name neon)
 (libraries
  winit
  softbuffer
  unix
  bigarray
  core
  sdf_passthrough_oracle
  sdf_resample_oracle
  core_unix
  core_unix.command_unix
  image_buf
  phase_trace
  phase_trace_perfetto
  sdf
  neo
  sdf_runner
  parallel
  parallel.scheduler
  march
  line_join
  unboxed.float32_u
  unboxed.float_u)
 (preprocess
  (pps ppx_jane)))
