(library
 (name sdf)
 (libraries
  bigarray
  base
  stdlib_upstream_compatible
  core
  phase_trace
  parallel
  parallel.scheduler
  unboxed.float32_u
  unboxed.int32_u)
 (foreign_stubs
  (language c)
  (names simd_stubs))
 (preprocess
  (pps ppx_jane ppx_builtin))
 (ocamlopt_flags
  (:standard -zero-alloc-check all)))
