; Rule to build the Rust FFI library using Cargo
; We use --manifest-path to point to the source Cargo.toml to avoid workspace issues

(rule
 (targets libsoftbuffer_ffi.a dllsoftbuffer_ffi.so)
 (deps
  (source_tree ../ffi/src)
  (source_tree ../../winit/ffi/src)
  (source_tree ../../vendor)
  ../ffi/Cargo.toml
  ../../winit/ffi/Cargo.toml
  ../../Cargo.toml
  build_softbuffer_ffi.sh)
 (action
  (no-infer
   (bash "./%{dep:build_softbuffer_ffi.sh} %{profile}"))))

(library
 (name softbuffer)
 (public_name softbuffer)
 (libraries winit bigarray)
 (foreign_stubs
  (language c)
  (names softbuffer_stubs)
  (flags :standard))
 (foreign_archives softbuffer_ffi))
