; Rule to build the Rust FFI library using Cargo
; We use --manifest-path to point to the source Cargo.toml to avoid workspace issues

(rule
 (targets libsoftbuffer_ffi.a dllsoftbuffer_ffi.so libsoftbuffer_ffi.so)
 (deps
  (source_tree ../ffi/src)
  (source_tree ../../winit/ffi/src)
  (source_tree ../../vendor)
  (source_tree ../../combined_ffi/src)
  (source_tree ../../vendor/wgpu-native/src)
  (source_tree ../../vendor/wgpu-native/ffi)
  ../ffi/Cargo.toml
  ../../winit/ffi/Cargo.toml
  ../../Cargo.toml
  ../../combined_ffi/Cargo.toml
  build_softbuffer_ffi.sh)
 (action
  (no-infer
   (bash "./%{dep:build_softbuffer_ffi.sh} %{profile}"))))

; Generate profile-dependent linking flags (static for release, dynamic for debug)

(rule
 (targets link_mode_flags.sexp)
 (deps
  gen_link_mode_flags.sh
  libsoftbuffer_ffi.a
  dllsoftbuffer_ffi.so
  libsoftbuffer_ffi.so)
 (action
  (bash "./%{dep:gen_link_mode_flags.sh} %{profile}")))

(library
 (name softbuffer)
 (public_name softbuffer)
 (libraries winit bigarray)
 (foreign_stubs
  (language c)
  (names softbuffer_stubs)
  (flags :standard))
 (c_library_flags
  (:standard
   (:include link_mode_flags.sexp))))
