; Rule to build wgpu-native as a static library using Cargo

(rule
 (alias default)
 (targets libwgpu_native.a dllwgpu_native.so libwgpu_native.so)
 (deps
  (source_tree ../../vendor/wgpu-native/src)
  (source_tree ../../vendor/wgpu-native/ffi)
  ../../vendor/wgpu-native/Cargo.toml
  ../../vendor/wgpu-native/Cargo.lock
  build_wgpu_native.sh)
 (action
  (no-infer
   (run bash build_wgpu_native.sh %{profile}))))

; Generate profile-dependent linking flags (static for release, dynamic for debug)

(rule
 (alias default)
 (targets link_mode_flags.sexp)
 (deps gen_link_mode_flags.sh libwgpu_native.a dllwgpu_native.so libwgpu_native.so)
 (action
  (bash "./%{dep:gen_link_mode_flags.sh} %{profile}")))

(library
 (name wgpu_low)
 (public_name wgpu.low)
 (foreign_stubs
  (language c)
  (names wgpu_low_stubs)
  (include_dirs
   ../../vendor/wgpu-native/ffi
   ../../vendor/wgpu-native/ffi/webgpu-headers)
  (flags :standard))
 (c_library_flags
  (:standard
   (:include c_library_flags.sexp)
   (:include link_mode_flags.sexp))))

; Generate platform-specific C library flags

(rule
 (alias default)
 (targets c_library_flags.sexp)
 (deps gen_c_library_flags.sh)
 (action
  (bash "./%{dep:gen_c_library_flags.sh}")))

; Code generation rules

(rule
 (alias default)
 (deps
  (source_tree ../codegen/templates))
 (action
  (with-stdout-to
   wgpu_low_stubs.c
   (pipe-stdout
    (run ../codegen/gen_bindings.exe Low C)
    (run clang-format))))
 (mode promote)
 (target wgpu_low_stubs.c))

(rule
 (alias default)
 (action
  (with-stdout-to
   wgpu_low.ml
   (pipe-stdout
    (run ../codegen/gen_bindings.exe Low Ml)
    (run ocamlformat --impl -))))
 (mode promote)
 (target wgpu_low.ml))

(rule
 (alias default)
 (action
  (with-stdout-to
   wgpu_low.mli
   (pipe-stdout
    (run ../codegen/gen_bindings.exe Low Mli)
    (run ocamlformat --intf -))))
 (mode promote)
 (target wgpu_low.mli))
