[package]
name = "winit_ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
winit = { path = "../../vendor/winit/winit" }
raw-window-handle = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"
cocoa = "0.26"
core-graphics = "0.24"
