; Rule to build the Rust FFI library using Cargo
; We use --manifest-path to point to the source Cargo.toml to avoid workspace issues

(rule
 (targets libwinit_ffi.a dllwinit_ffi.so libwinit_ffi.so)
 (deps
  (source_tree ../ffi/src)
  (source_tree ../../vendor)
  ../ffi/Cargo.toml
  ../../Cargo.toml
  build_winit_ffi.sh)
 (action
  (no-infer
   (bash "./%{dep:build_winit_ffi.sh} %{profile}"))))

; Generate platform-specific C library flags

(rule
 (targets c_library_flags.sexp)
 (deps gen_c_library_flags.sh)
 (action
  (bash "./%{dep:gen_c_library_flags.sh}")))

; Generate profile-dependent linking flags (static for release, dynamic for debug)

(rule
 (targets link_mode_flags.sexp)
 (deps gen_link_mode_flags.sh libwinit_ffi.a dllwinit_ffi.so libwinit_ffi.so)
 (action
  (bash "./%{dep:gen_link_mode_flags.sh} %{profile}")))

(library
 (name winit)
 (public_name winit)
 (libraries unix)
 (foreign_stubs
  (language c)
  (names winit_stubs)
  (flags :standard))
 (c_library_flags
  (:standard
   (:include c_library_flags.sexp)
   (:include link_mode_flags.sexp))))
