(executables
 (names rotation rotation_via_unit_circle)
 (libraries wgpu core core_unix test_util)
 (preprocess
  (pps ppx_jane)))

(rule
 (alias runtest)
 (action
  (run ./rotation.exe))
 (targets
  rotation_0deg.png
  rotation_45deg.png
  rotation_90deg.png
  rotation_180deg.png)
 (mode promote))

(rule
 (alias runtest)
 (deps
  "%{workspace_root}/imgdiff.sh"
  rotation_0deg.expected.png
  rotation_0deg.png)
 (action
  (bash "%{deps}")))

(rule
 (alias runtest)
 (deps
  "%{workspace_root}/imgdiff.sh"
  rotation_45deg.expected.png
  rotation_45deg.png)
 (action
  (bash "%{deps}")))

(rule
 (alias runtest)
 (deps
  "%{workspace_root}/imgdiff.sh"
  rotation_90deg.expected.png
  rotation_90deg.png)
 (action
  (bash "%{deps}")))

(rule
 (alias runtest)
 (deps
  "%{workspace_root}/imgdiff.sh"
  rotation_180deg.expected.png
  rotation_180deg.png)
 (action
  (bash "%{deps}")))

(rule
 (alias runtest)
 (action
  (run ./rotation_via_unit_circle.exe))
 (targets
  rotation_unit_circle_1_0.png
  rotation_unit_circle_0707_0707.png
  rotation_unit_circle_0_1.png
  rotation_unit_circle_neg1_0.png)
 (mode promote))

(rule
 (alias runtest)
 (deps
  "%{workspace_root}/imgdiff.sh"
  rotation_unit_circle_1_0.expected.png
  rotation_unit_circle_1_0.png)
 (action
  (bash "%{deps}")))

(rule
 (alias runtest)
 (deps
  "%{workspace_root}/imgdiff.sh"
  rotation_unit_circle_0707_0707.expected.png
  rotation_unit_circle_0707_0707.png)
 (action
  (bash "%{deps}")))

(rule
 (alias runtest)
 (deps
  "%{workspace_root}/imgdiff.sh"
  rotation_unit_circle_0_1.expected.png
  rotation_unit_circle_0_1.png)
 (action
  (bash "%{deps}")))

(rule
 (alias runtest)
 (deps
  "%{workspace_root}/imgdiff.sh"
  rotation_unit_circle_neg1_0.expected.png
  rotation_unit_circle_neg1_0.png)
 (action
  (bash "%{deps}")))
