(executable
 (name skybox)
 (libraries wgpu core core_unix test_util gg)
 (preprocess
  (pps ppx_jane)))

; Copy the skybox assets into the build directory

(rule
 (targets pos-x.png neg-x.png pos-y.png neg-y.png pos-z.png neg-z.png)
 (deps
  %{workspace_root}/test/assets/skybox/pos-x.png
  %{workspace_root}/test/assets/skybox/neg-x.png
  %{workspace_root}/test/assets/skybox/pos-y.png
  %{workspace_root}/test/assets/skybox/neg-y.png
  %{workspace_root}/test/assets/skybox/pos-z.png
  %{workspace_root}/test/assets/skybox/neg-z.png)
 (action
  (progn
   (copy %{workspace_root}/test/assets/skybox/pos-x.png pos-x.png)
   (copy %{workspace_root}/test/assets/skybox/neg-x.png neg-x.png)
   (copy %{workspace_root}/test/assets/skybox/pos-y.png pos-y.png)
   (copy %{workspace_root}/test/assets/skybox/neg-y.png neg-y.png)
   (copy %{workspace_root}/test/assets/skybox/pos-z.png pos-z.png)
   (copy %{workspace_root}/test/assets/skybox/neg-z.png neg-z.png))))

(rule
 (alias runtest)
 (deps pos-x.png neg-x.png pos-y.png neg-y.png pos-z.png neg-z.png)
 (action
  (run ./skybox.exe))
 (targets skybox_front.png skybox_right.png skybox_back.png skybox_left.png)
 (mode promote))

(rule
 (alias runtest)
 (deps
  "%{workspace_root}/imgdiff.sh"
  skybox_front.expected.png
  skybox_front.png)
 (action
  (bash "%{deps}")))

(rule
 (alias runtest)
 (deps
  "%{workspace_root}/imgdiff.sh"
  skybox_right.expected.png
  skybox_right.png)
 (action
  (bash "%{deps}")))

(rule
 (alias runtest)
 (deps
  "%{workspace_root}/imgdiff.sh"
  skybox_back.expected.png
  skybox_back.png)
 (action
  (bash "%{deps}")))

(rule
 (alias runtest)
 (deps
  "%{workspace_root}/imgdiff.sh"
  skybox_left.expected.png
  skybox_left.png)
 (action
  (bash "%{deps}")))
